agregado acta_confirmada a DTO
