# bedelia-rest/storage/api-docs/api-docs.json
@@ -2359,6 +2359,10 @@
                         "type": "string",
                         "readOnly": true
                     },
+                    "acta_confirmada": {
+                        "type": "boolean",
+                        "readOnly": true
+                    },
                     "notas": {
                         "type": "array",
                         "items": {
